feat: add settings and lukestack plugins to automate full-stack builds
Introduces a settings plugin to automate multi-project inclusion and version catalogs, and a lukestack plugin providing integrated tasks for GCP, Docker, and Bun/Vite frontends. The base plugin now auto-detects project modes and enforces Java 25 for applications to fully support virtual threads.